@@ -9,10 +9,12 @@ import com.example.tweets.mapper.TweetMapper;
 import com.example.tweets.repository.TweetRepository;
 import com.example.tweets.util.TweetUtil;
 import lombok.RequiredArgsConstructor;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,9 +26,10 @@ public class ReplyService {
     private final TweetMapper tweetMapper;
     private final ProfileServiceClient profileServiceClient;
     private final MessageSourceService messageSourceService;
+    private final FanoutService.UserTimelineService userTimelineService;
 
-    public TweetResponse reply(TweetCreateRequest tweetCreateRequest, Long parentTweetId, String loggedInUser) {
-        Tweet parentTweet = tweetService.getTweetEntityById(parentTweetId);
+    public TweetResponse reply(TweetCreateRequest tweetCreateRequest, Long replyToId, String loggedInUser) {
+        Tweet parentTweet = tweetService.getTweetEntityById(replyToId);
         return Optional.of(tweetCreateRequest)
                 .map(req -> tweetMapper.toEntity(req, null, parentTweet, profileServiceClient, loggedInUser))
                 .map(reply -> {
@@ -35,6 +38,7 @@ public class ReplyService {
                 })
                 .map(tweetRepository::saveAndFlush)
                 .map(reply -> tweetMapper.toResponse(reply, tweetUtil, profileServiceClient))
+                .map(userTimelineService::addTweetToUserTimeline)
                 .orElseThrow(() -> new CreateEntityException(
                         messageSourceService.generateMessage("error.entity.unsuccessful_creation")
                 ));
@@ -42,17 +46,17 @@ public class ReplyService {
 
     public List<TweetResponse> findAllRepliesForUser(String loggedInUser) {
         String profileId = profileServiceClient.getProfileIdByLoggedInUser(loggedInUser);
-        return tweetRepository.findAllByProfileIdAndReplyToIsNotNull(profileId)
+        return tweetRepository.findAllByProfileIdAndReplyToIsNotNullOrderByCreationDateDesc(profileId)
                 .stream()
                 .map(reply -> tweetMapper.toResponse(reply, tweetUtil, profileServiceClient))
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    public List<TweetResponse> findAllRepliesForTweet(Long parentTweetId) {
-        Tweet parentTweet = tweetService.getTweetEntityById(parentTweetId);
-        return parentTweet.getReplies()
+    @Cacheable(cacheNames = "repliesForTweet", unless = "#result.size() < 1000")
+    public List<TweetResponse> findAllRepliesForTweet(Long replyToId) {
+        return tweetRepository.findAllByReplyToId(replyToId)
                 .stream()
                 .map(reply -> tweetMapper.toResponse(reply, tweetUtil, profileServiceClient))
-                .toList();
+                .collect(Collectors.toList());
     }
 }
